--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.3",
 		"bootstrap": "^4.6.0",
 		"jquery": "^3.5.1",
 		"popper.js": "^1.16.1",
